--- a/index.html
+++ b/index.html
@@ -322,6 +322,6 @@
     <li>Jilian</li><li>Oliver</li>
     <li>Karen</li>
   </ol>
-  <p class="a"> <a href="https://wa.me/254748397839">Made by Rapha chege</a></p>
+  <p class="a"> <a href="https://wa.me/254794859271">Made by Jack okoth</a></p>
 </body>
 </html>
